Uploader and viewer working as expected.  Resolve alignment issue of rendered pictures.

--- a/css/style.css
+++ b/css/style.css
@@ -14,4 +14,5 @@ html, body {
     width: 100%;
     color: white;
     padding: 15px;
+    clear: both;
 }
